@@ -984,6 +984,7 @@ Other memory:
 	* Add support for Windows native toolchains that cannot follow Cygwin soft links
 	* Modified serial driver interface to handle hardware with non-16550A-like
 	  interrupt architecture (like the Z16F)
+	* Added a &quot;dumb&quot; serial console driver to simply OS bringup
 </pre></ul>
 
 <table width ="100%">
